@@ -126,7 +126,6 @@ case $startStop in
     echo starting $command, logging to $logout
     # Add to the command log file vital stats on our environment.
     echo "`date` Starting $command on `hostname`" >> $loglog
-    $JAVA -version >> $loglog 2>&1
     echo "ulimit -n `ulimit -n`" >> $loglog 2>&1
     nohup nice -n $HBASE_NICENESS "$HBASE_HOME"/bin/hbase \
         --config "${HBASE_CONF_DIR}" \
