@@ -107,6 +107,7 @@ Release 0.19.0 - Unreleased
    HBASE-1052  Stopping a HRegionServer with unflushed cache causes data loss
                from org.apache.hadoop.hbase.DroppedSnapshotException
    HBASE-1059  ConcurrentModificationException in notifyChangedReadersObservers
+   HBASE-1063  "File separator problem on Windows" (Max Lehn via Stack)
 
   IMPROVEMENTS
    HBASE-901   Add a limit to key length, check key and value length on client side
@@ -172,6 +173,8 @@ Release 0.19.0 - Unreleased
                (Doğacan Güney via Stack)
    HBASE-1048  HLog: Found 0 logs to remove out of total 1450; oldest
                outstanding seqnum is 162297053 fr om region -ROOT-,,0
+   HBASE-1055  Better vm stats on startup
+   HBASE-1065  Minor logging improvements in the master
 
   NEW FEATURES
    HBASE-875   Use MurmurHash instead of JenkinsHash [in bloomfilters]
